Thu Feb  6 16:21:41 1997  Samuel Tardieu  <sam@inf.enst.fr>

Thu Dec 19 14:36:31 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Changed detection of get_errno. Should raise an
	  error on Linux instead of producing bad assembly code.

Thu Nov 28 19:53:19 1996  Laurent Pautet <pautet@inf.enst.fr>
Thu Nov 28 19:53:19 1996  Laurent Pautet <pautet@inf.enst.fr>
	* INSTALL: Fix minor typos.

Wed Nov 27 15:58:22 1996  Laurent Pautet <pautet@inf.enst.fr>
Wed Nov 27 15:58:22 1996  Laurent Pautet <pautet@inf.enst.fr>
Thu Nov 28 19:53:19 1996  Laurent Pautet <pautet@inf.enst.fr>
	  in Doc/install_guide.txt.

Tue Oct 29 18:31:35 1996  Samuel Tardieu  <sam@inf.enst.fr>
Wed Nov 27 15:58:22 1996  Laurent Pautet <pautet@inf.enst.fr>
	* configure.in: Check for get_errno or __get_errno.

	* configure: Bug in Linux configuration.

Mon Oct 28 14:44:58 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* COPYING: Added to the distribution.

Tue Oct 22 10:25:36 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Minor reformating.
	Changed help message "--with-launching" into "--without-launching".

Mon Oct 21 18:16:54 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* configure.in, Garlic/Makefile.am: Several new variables :
	[PROTOCOLS|NON_EMBEDDED]_[SOURCES|OBJECTS]
	PROTOCOLS    :  list of protocols
	NON_EMBEDDED :  do we laucnh partition
