@@ -1,5 +1,8 @@
 Thu Feb  6 16:21:41 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
+	* configure.in: In get_errno is not found in GNAT lib, then use
+	  __get_errno instead.
+
 Thu Dec 19 14:36:31 1996  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* configure.in: Changed detection of get_errno. Should raise an
